--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -1,15 +1,27 @@
-<!---//
-# Gen-IA
+<!-- 
+===============================================================================
+# Project: Gen-IA
+# Website: Minimal welcome website
+===============================================================================
+
+## GENiALABILE
 Advanced-GPT inspiring multidimensional solutions and unlocking creative potential.
 
+-------------------------------------------------------------------------------
 ## License
 © 2025 GENiALABILE. All Rights Reserved.
-A GPT Based Project—Designed by @seiseisette. 
-This project is no longer available as open-source. Updated to 10 Jan 2025.
-Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
----
-hptts://www.genialabile.com/
-//--->
+A GPT-Based Project — Designed by seiseisette.
+Repository: https://github.com/seiseisette/
+This project is no longer available as open-source. Updated: 10 Jan 2025.
+Use, distribution, or modification of this project is strictly prohibited
+without prior written authorization.
+-------------------------------------------------------------------------------
+
+# Version: v2.1
+# URL: https://www.genialabile.com/cookie-policy.html
+===============================================================================
+-->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -47,7 +59,7 @@ hptts://www.genialabile.com/
             <br><br>
             <b>0. Welcome to GENiALABILE</b>
             <br><br>
-            GENiALABILE do not uses cookies and similar for tracking users, analyze website performance, and deliver personalized content.
+            GENiALABILE does not uses cookies and similar for tracking users, analyze website performance, and deliver personalized content.
             This Cookie Policy explains what cookies are, why we do not use them, and your options for managing cookies in other website.
             We use only the minimium ones required to improve user experience, without data collecting.
 
@@ -122,10 +134,10 @@ hptts://www.genialabile.com/
         </main>
 
 
-        <!-- Footer ------------------------------------------------------------------>
+        <!-- FOOTER ------> 
             <script>
                 document.addEventListener('DOMContentLoaded', function() {
-                    fetch('footer.html')
+                    fetch('https://www.genialabile.com/footer.html')
                         .then(response => response.text())
                         .then(data => {
                             const body = document.querySelector('body');
@@ -136,7 +148,8 @@ hptts://www.genialabile.com/
                     .catch(error => console.error('Errore nel caricamento del footer:', error));
                 });
             </script> 
-        <!-- Footer ------------------------------------------------------------------>
+        <!-- FOOTER ------> 
+
 
         <script>
             document.addEventListener("DOMContentLoaded", function () {
@@ -149,6 +162,3 @@ hptts://www.genialabile.com/
 
     </body>
 </html>
-<!---//
-//ENDLINE & BYE BYE
-/--->
