--- a/header.html
+++ b/header.html
@@ -1,22 +1,39 @@
-<!---//
-# Gen-IA
+<!-- 
+===============================================================================
+# Project: Gen-IA
+# Website: Minimal welcome website
+===============================================================================
+
+## GENiALABILE
 Advanced-GPT inspiring multidimensional solutions and unlocking creative potential.
----
+
+-------------------------------------------------------------------------------
 ## License
 © 2025 GENiALABILE. All Rights Reserved.
-A GPT Based Project—Designed by @seiseisette. 
-This project is no longer available as open-source. Updated to 10 Jan 2025.
-Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
----
-https://www.genialabile.com/header.html
-//-->
+A GPT-Based Project — Designed by seiseisette.
+Repository: https://github.com/seiseisette/
+This project is no longer available as open-source. Updated: 10 Jan 2025.
+Use, distribution, or modification of this project is strictly prohibited
+without prior written authorization.
+-------------------------------------------------------------------------------
+
+# Version: v2.1
+# URL: https://www.genialabile.com/header.html
+===============================================================================
+-->
 
 <!---// STARTLINE & SAY HI //--->
+
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
+    <meta name="GENiALABILE-access" content="true">
+
     <meta name="color-scheme" content="dark">
     <meta name="theme-color" content="#000000" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    
 
     <meta property="og:title" content="GENiALABILE | Unique Page Title">
     <meta property="og:description" content="Custom description for this page.">
