--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
-<!---//
-# Gen-IA
+<!-- 
+===============================================================================
+# Project: Gen-IA
+# Website: Minimal welcome website
+===============================================================================
+
+## GENiALABILE
 Advanced-GPT inspiring multidimensional solutions and unlocking creative potential.
----
+
+-------------------------------------------------------------------------------
 ## License
 © 2025 GENiALABILE. All Rights Reserved.
-A GPT Based Project—Designed by @seiseisette. 
-This project is no longer available as open-source. Updated to 10 Jan 2025.
-Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
----
-https://www.genialabile.com/index.html
-//--->
+A GPT-Based Project — Designed by seiseisette.
+Repository: https://github.com/seiseisette/
+This project is no longer available as open-source. Updated: 10 Jan 2025.
+Use, distribution, or modification of this project is strictly prohibited
+without prior written authorization.
+-------------------------------------------------------------------------------
 
-<!---// STARTLINE & SAY HI //--->
+# Version: v2.1
+# URL: https://www.genialabile.com/index.html
+===============================================================================
+-->
+
 <!DOCTYPE html>
 <html lang="en">
     
@@ -30,7 +40,13 @@ https://www.genialabile.com/index.html
                     .then(data => {
                         document.querySelector('head').innerHTML += data;
                     })
-                    .catch(error => console.error('Errore nel caricamento Header:', error));
+                    .catch(error => {
+                        console.error('Errore nel caricamento header:', error);
+                        document.querySelector('head').innerHTML += `
+                            <meta charset="UTF-8">
+                            <meta name="viewport" content="width=device-width, initial-scale=1">
+                        `;
+                    });
             </script>
         <!-- HEAD ------------------------------------------------------------------> 
     </head>
@@ -113,7 +129,7 @@ https://www.genialabile.com/index.html
 
         </main>
 
-        <!-- FOOT  ------------------------------------------------------------------>
+        <!-- FOOTER  ------------------------------------------------------------------>
             <script>
                 document.addEventListener('DOMContentLoaded', function() {
                     fetch('https://www.genialabile.com/footer.html')
@@ -124,10 +140,16 @@ https://www.genialabile.com/index.html
                             footerContainer.innerHTML = data;
                             body.appendChild(footerContainer);
                         })
-                    .catch(error => console.error('Errore nel caricamento del Footer:', error));
+                        .catch(error => {
+                            console.error('Errore nel caricamento footer:', error);
+                            document.querySelector('head').innerHTML += `
+                                <meta charset="UTF-8">
+                                <meta name="viewport" content="width=device-width, initial-scale=1">
+                        `;
+                    });
                 });
             </script> 
-        <!-- FOOT ------------------------------------------------------------------>
+        <!-- FOOTER ------------------------------------------------------------------>
 
         <script>
             document.addEventListener("DOMContentLoaded", function () {
@@ -139,4 +161,3 @@ https://www.genialabile.com/index.html
 
     </body>
 </html>
-<!---// ENDLINE & SAY BYE //--->
