--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,17 +1,30 @@
-<!---//
-# Gen-IA
+<!-- 
+===============================================================================
+# Project: Gen-IA
+# Website: Minimal welcome website
+===============================================================================
+
+## GENiALABILE
 Advanced-GPT inspiring multidimensional solutions and unlocking creative potential.
 
+-------------------------------------------------------------------------------
 ## License
 © 2025 GENiALABILE. All Rights Reserved.
-A GPT Based Project—Designed by @seiseisette. 
-This project is no longer available as open-source. Updated to 10 Jan 2025.
-Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
----
-hptts://www.genialabile.com/
-//--->
+A GPT-Based Project — Designed by seiseisette.
+Repository: https://github.com/seiseisette/
+This project is no longer available as open-source. Updated: 10 Jan 2025.
+Use, distribution, or modification of this project is strictly prohibited
+without prior written authorization.
+-------------------------------------------------------------------------------
+
+# Version: v2.1
+# URL: https://www.genialabile.com/pricacy-policy.html
+===============================================================================
+-->
+
 <!DOCTYPE html>
 <html lang="en">
+    
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
@@ -120,13 +133,23 @@ hptts://www.genialabile.com/
                 If you have any questions or concerns, contact us at: 
                 <a href="mailto:genialabile@gmail.com?subject=Privacy%20Policy%20For" style="font-weight: normal;">genialabile@gmail.com</a>
             </p>
+
         </main>
 
+        <!-- FADE --> 
+            <script>
+                document.addEventListener("DOMContentLoaded", function () {
+                    setTimeout(function () {
+                        document.body.classList.add("visible");
+                    }, 2000);
+                });
+            </script>
+        <!-- FADE --> 
 
-        <!-- Footer ------------------------------------------------------------------>
+        <!-- FOOTER ------> 
             <script>
                 document.addEventListener('DOMContentLoaded', function() {
-                    fetch('footer.html')
+                    fetch('https://www.genialabile.com/footer.html')
                         .then(response => response.text())
                         .then(data => {
                             const body = document.querySelector('body');
@@ -137,19 +160,8 @@ hptts://www.genialabile.com/
                     .catch(error => console.error('Errore nel caricamento del footer:', error));
                 });
             </script> 
-        <!-- Footer ------------------------------------------------------------------>
-
-        <script>
-            document.addEventListener("DOMContentLoaded", function () {
-                setTimeout(function () {
-                    document.body.classList.add("visible");
-                }, 2000);
-            });
-        </script>
-
+        <!-- FOOTER ------> 
 
     </body>
+
 </html>
-<!---//
-//ENDLINE & BYE BYE
-/--->
