--- a/footer.html
+++ b/footer.html
@@ -1,22 +1,33 @@
-<!--//
-# Gen-IA
+<!-- 
+===============================================================================
+# Project: Gen-IA
+# Website: Minimal welcome website
+===============================================================================
+
+## GENiALABILE
 Advanced-GPT inspiring multidimensional solutions and unlocking creative potential.
----
+
+-------------------------------------------------------------------------------
 ## License
 © 2025 GENiALABILE. All Rights Reserved.
-A GPT Based Project—Designed by @seiseisette. 
-This project is no longer available as open-source. Updated to 10 Jan 2025.
-Use, distribution, or modification of this project is strictly prohibited without prior written authorization.
----
-https://www.genialabile.com/footer.html
-//-->
+A GPT-Based Project — Designed by seiseisette.
+Repository: https://github.com/seiseisette/
+This project is no longer available as open-source. Updated: 10 Jan 2025.
+Use, distribution, or modification of this project is strictly prohibited
+without prior written authorization.
+-------------------------------------------------------------------------------
 
-<!---// STARTLINE & SAY HI //--->
+# Version: v2.1
+# URL: https://www.genialabile.com/footer.html
+===============================================================================
+-->
+
+<!--// STARTLINE & SAY HI //--->
 
     <footer> 
         <b> <!-- ALERT MODE -->
             * We are testing the website. Please, do not take nothing as official since this message is on-screen. Thank you. *
-        </b><br><br><br><br><!-- // ALERT MODE -->
+            <!-- // ALERT MODE --> </b><br><br><br><br><!-- // ALERT MODE -->
         © 2025 <a href="https://www.genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
         Advanced-GPT Project—Designed by <a href= "https://github.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
         Powered by <a href= "https://openai.com/" style="font-weight: normal">OpenAI</a>.
@@ -25,10 +36,10 @@ https://www.genialabile.com/footer.html
             <p class="imp-p" style="font-size: 0.7rem;">
                 <br>
                 <a href="https://www.genialabile.com/" style="font-weight: normal">
-                    CAMPOBASE</a>
+                    /<</a>
                 |
                 <a href="https://www.genialabile.com/contacts" style="font-weight: normal">
-                    LINKS</a>
+                    CONTACT</a>
                 <!-- DRAFT
                     |
                     <a href="https://www.genialabile.com//faq" style="font-weight: normal">
@@ -45,7 +56,7 @@ https://www.genialabile.com/footer.html
                     COOKIES</a>
                 | 
                 <a href="https://www.genialabile.com/accessibility" style="font-weight: normal">
-                    ACCESS</a>
+                    ACCESSIBILITY</a>
             </p>
         <!-- <br><br><br><br><br><br><br> -->
     </footer>
