Ristrutturazione della formattazione del footer e della politica sui cookie per migliorare la leggibilità e l'organizzazione del codice

--- a/footer.html
+++ b/footer.html
@@ -32,8 +32,8 @@ without prior written authorization.
         Advanced-GPT Project—Designed by <a href= "https://github.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
         Powered by <a href= "https://openai.com/" style="font-weight: normal">OpenAI</a>.
         <br>
-        <!-- <br><br><br><br><br><br><br> -->
-            <p class="imp-p" style="font-size: 0.7rem;">
+        <!-- <br><br><br><br><br><br><br>  style="font-size: 0.7rem;-->
+            <p class="imp-p txt-mini">
                 <br>
                 <a href="https://www.genialabile.com/" style="font-weight: normal">
                     /<</a>
@@ -56,7 +56,7 @@ without prior written authorization.
                     COOKIES</a>
                 | 
                 <a href="https://www.genialabile.com/accessibility" style="font-weight: normal">
-                    ACCESSIBILITY</a>
+                    ACCESS</a>
             </p>
         <!-- <br><br><br><br><br><br><br> -->
     </footer>
