--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -51,7 +51,7 @@ without prior written authorization.
     <main>
         <!-- Sezione Informazioni -->
         <h1>Cookie Policy</h1>
-        <p style="font-size: 0.6rem;">
+        <p class="txt-mini">
             {Last Updated: 10 January 2025}
         </p>
 
