--- a/footer.html
+++ b/footer.html
@@ -30,7 +30,7 @@ without prior written authorization.
             <!-- // ALERT MODE --> </b><br><br><br><br><!-- // ALERT MODE -->
         © 2025 <a href="https://www.genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
         Advanced-GPT Project—Designed by <a href= "https://github.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
-        Powered by <a href= "https://openai.com/" style="font-weight: normal">OpenAI</a>.
+        <!-- Powered by <a href= "https://openai.com/" style="font-weight: normal">OpenAI</a>. -->
         <br>
         <!-- <br><br><br><br><br><br><br>  style="font-size: 0.7rem;-->
             <p class="imp-p txt-mini">
