--- a/footer.html
+++ b/footer.html
@@ -37,7 +37,7 @@ without prior written authorization.
                 <br>
                 <a href="https://www.genialabile.com/" style="font-weight: normal" aria-label="Home">/<</a>
                 |
-                <a href="https://www.genialabile.com/contacts" style="font-weight: normal"></a>CONTACT</a>
+                <a href="https://www.genialabile.com/contacts"></a>CONTACT</a>
                 |
                 <a href="https://www.genialabile.com/terms-and-conditions" style="font-weight: normal">TERMS</a>
                 |
@@ -45,7 +45,7 @@ without prior written authorization.
                 | 
                 <a href="https://www.genialabile.com/cookie-policy" style="font-weight: normal">COOKIES</a>
                 | 
-                <a href="https://www.genialabile.com/accessibility" style="font-weight: normal">ACCESS</a>
+                <a href="https://www.genialabile.com/accessibility" style="font-weight: normal" aria-label="accessibility">ACCESS</a>
             </p>
         <!-- <br><br><br><br><br><br><br> -->
     </footer>
