Rimozione dello stile font-weight normale dai link nel footer per semplificare il codice e migliorare la coerenza visiva

--- a/footer.html
+++ b/footer.html
@@ -35,17 +35,17 @@ without prior written authorization.
         <!-- <br><br><br><br><br><br><br>  style="font-size: 0.7rem;-->
             <p class="imp-p txt-mini">
                 <br>
-                <a href="https://www.genialabile.com/" style="font-weight: normal" aria-label="Home">/<</a>
+                <a href="https://www.genialabile.com/" aria-label="Home">/<</a>
                 |
                 <a href="https://www.genialabile.com/contacts"></a>CONTACT</a>
                 |
-                <a href="https://www.genialabile.com/terms-and-conditions" style="font-weight: normal">TERMS</a>
+                <a href="https://www.genialabile.com/terms-and-conditions">TERMS</a>
                 |
-                <a href="https://www.genialabile.com/privacy-policy" style="font-weight: normal">PRIVACY</a>
+                <a href="https://www.genialabile.com/privacy-policy">PRIVACY</a>
                 | 
-                <a href="https://www.genialabile.com/cookie-policy" style="font-weight: normal">COOKIES</a>
+                <a href="https://www.genialabile.com/cookie-policy">COOKIES</a>
                 | 
-                <a href="https://www.genialabile.com/accessibility" style="font-weight: normal" aria-label="accessibility">ACCESS</a>
+                <a href="https://www.genialabile.com/accessibility" aria-label="accessibility">ACCESS</a>
             </p>
         <!-- <br><br><br><br><br><br><br> -->
     </footer>
