Rinominata la classe .txt-mini in .imp-p e aggiornati gli stili per migliorare la coerenza visiva e l'accessibilità

--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -51,7 +51,7 @@ without prior written authorization.
     <main>
         <!-- Sezione Informazioni -->
         <h1>Cookie Policy</h1>
-        <p class="txt-mini">
+        <p class="imp-p">
             {Last Updated: 10 January 2025}
         </p>
 
