--- a/footer.html
+++ b/footer.html
@@ -33,7 +33,7 @@ without prior written authorization.
         <!-- Powered by <a href= "https://openai.com/" style="font-weight: normal">OpenAI</a>. -->
         <br>
         <!-- <br><br><br><br><br><br><br>  style="font-size: 0.7rem;-->
-            <p class="imp-p txt-mini">
+            <p class="imp-p">
                 <br>
                 <a href="https://www.genialabile.com/" aria-label="Home">/<</a>
                 |
@@ -45,7 +45,7 @@ without prior written authorization.
                 | 
                 <a href="https://www.genialabile.com/cookie-policy">COOKIES</a>
                 | 
-                <a href="https://www.genialabile.com/accessibility" aria-label="accessibility">ACCESS</a>
+                <a href="https://www.genialabile.com/accessibility" style="font-weight: normal" aria-label="accessibility">ACCESS</a>
             </p>
         <!-- <br><br><br><br><br><br><br> -->
     </footer>
