Correzione dei link nel footer e rimozione dello stile font-weight normale per migliorare l'accessibilità e la coerenza visiva

--- a/footer.html
+++ b/footer.html
@@ -37,7 +37,7 @@ without prior written authorization.
                 <br>
                 <a href="https://www.genialabile.com/" aria-label="Home">/<</a>
                 |
-                <a href="https://www.genialabile.com/contacts"></a>CONTACT</a>
+                <a href="https://www.genialabile.com/contacts">CONTACT</a>
                 |
                 <a href="https://www.genialabile.com/terms-and-conditions">TERMS</a>
                 |
@@ -45,7 +45,7 @@ without prior written authorization.
                 | 
                 <a href="https://www.genialabile.com/cookie-policy">COOKIES</a>
                 | 
-                <a href="https://www.genialabile.com/accessibility" style="font-weight: normal" aria-label="accessibility">ACCESS</a>
+                <a href="https://www.genialabile.com/accessibility" aria-label="accessibility">ACCESS</a>
             </p>
         <!-- <br><br><br><br><br><br><br> -->
     </footer>
