Aggiornamento della classe .imp-p per includere .txt-mini nel footer per migliorare la coerenza visiva

--- a/footer.html
+++ b/footer.html
@@ -33,7 +33,7 @@ without prior written authorization.
         <!-- Powered by <a href= "https://openai.com/" style="font-weight: normal">OpenAI</a>. -->
         <br>
         <!-- <br><br><br><br><br><br><br>  style="font-size: 0.7rem;-->
-            <p class="imp-p">
+            <p class="imp-p txt-mini">
                 <br>
                 <a href="https://www.genialabile.com/" aria-label="Home">/<</a>
                 |
