--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -52,7 +52,7 @@ without prior written authorization.
         <!-- Sezione Informazioni -->
         <h1>Cookie Policy</h1>
         <p class="txt-mini">
-            {Last Updated: 10 January 2025}
+            Last Updated: 10 January 2025
         </p>
 
         <p class="important-p">
