Aggiornamento del link nel footer per includere un separatore visivo e migliorare la coerenza stilistica

--- a/contacts.html
+++ b/contacts.html
@@ -141,7 +141,7 @@ without prior written authorization.
                     <div class="card-text">
                     
                         <p>
-                            <a href="/"  style="font-weight: normal;">GENiALABILE</a> ✧⌝
+                            <a href="/"  style="font-weight: normal;">GENiALABILE</a><b>·</b>⌝
                             <br>
                             Multidimensional Ave,
                             <br>
