Aggiorna la sezione di accessibilità con nuove funzionalità e modifica il titolo della sezione

--- a/accessibility.html
+++ b/accessibility.html
@@ -69,20 +69,21 @@ without prior written authorization.
                     <br><br> 
                     We have implemented the following features to enhance accessibility:
                     <br>
-                    [·] Keyboard navigation for users without a mouse.
+                    [·] High contrast design for better readability.
                     <br>
                     [·] Screen reader compatibility for visually impaired users.
+                    <!-- [·] Keyboard navigation for users without a mouse.
                     <br>
                     [·] Text scaling support for users with visual difficulties.
                     <br>
-                    [·] Color contrast adjustments for better readability.
+                    [·] Color contrast adjustments for better readability.-->
                     
                 <br><br><br>
 
-                <b>2. Third-Party Tools and Limitations</b>
+                <b>2. Tools and Limitations</b>
                     <br><br>
-                    Some content on this site may rely on third-party integrations, such as Google Analytics. 
                     We are working to ensure these services are accessible but cannot guarantee full compliance.
+                    <!-- Some content on this site may rely on third-party integrations, such as Google Analytics. -->
                     
                 <br><br><br>
 
