Modifica il separatore nel footer da "·" a "*"

--- a/contacts.html
+++ b/contacts.html
@@ -141,7 +141,7 @@ without prior written authorization.
                     <div class="card-text">
                     
                         <p>
-                            <a href="/"  style="font-weight: normal;">GENiALABILE</a><b>*</b>⌝
+                            <a href="/"  style="font-weight: normal;">GENiALABILE</a> *⌝
                             <br>
                             Multidimensional Ave,
                             <br>
