--- a/contacts.html
+++ b/contacts.html
@@ -68,69 +68,47 @@ without prior written authorization.
                 <b>0. Welcome to GENiALABILE</b>
                     <br><br>
                     If you have any questions, feedback, or inquiries about GENiALABILE, feel free to reach out to us using the information below.
-                    Join in our preview access for beta tester.
-                        <a href= "mailto:genialabile@gmail.com?subject=Request%20for%20Beta%20Access&body=Hello!%20I%20would%20like%20to%20request%20beta%20access%20to%20your%20application." >
-                            /></a>
+                    <a href= "mailto:genialabile@gmail.com?subject=Request%20for%20Beta%20Access&body=Hello!%20I%20would%20like%20to%20request%20beta%20access%20to%20your%20application." >Join</a>
+                    in our preview access for beta tester.
                 <br><br><br>
 
                 <b>1. Website</b>
                     <br><br>
-                    Our official website: 
-                        <a href="https://www.genialabile.com/" style="font-weight: normal;">
-                            www.genialabile.com
-                        </a>
+                    W: <a href="https://www.genialabile.com/" style="font-weight: normal;">www.genialabile.com</a>
                 <br><br><br>
 
                 <b>2. Email</b>
                     <br><br>
-                    Reach us at: 
-                        <a href="mailto:genialabile@gmail.com?subject=Contact%20Request%20For" style="font-weight: normal;">
-                            genialabile@gmail.com
-                        </a>
+                    E: <a href="mailto:genialabile@gmail.com?subject=Contact%20Request%20For" style="font-weight: normal;">
+                            genialabile@gmail.com</a>
                 <br><br><br>
 
                 <b>3. Social Media</b>
                     <br><br>
-                    X (Twitter): 
-                        <a href="https://x.com/genialabile/" style="font-weight: normal;">
-                            @genialabile
-                        </a>
+                    X (Twitter):<br>
+                    <a href="https://x.com/genialabile/" style="font-weight: normal;">@genialabile</a>
                     <br><br>
-                    Instagram: 
-                        <a href="https://instagram.com/genialabile/" style="font-weight: normal;">
-                            @genialabile
-                        </a>
+                    Instagram:<br>
+                    <a href="https://instagram.com/genialabile/" style="font-weight: normal;">@genialabile</a>
                     <br><br>
-                    Threads:
-                        <a href="https://threads.net/@genialabile/" style="font-weight: normal;">
-                            @genialabile
-                        </a>
+                    Threads:<br>
+                    <a href="https://threads.net/@genialabile/" style="font-weight: normal;">@genialabile</a>
                     <br><br>
-                    YouTube:
-                        <a href="https://youtube.com/@genialabile/" style="font-weight: normal;">
-                            @genialabile
-                        </a>
-                    <!---
-                    LinkedIn: 
-                        <a href="https://linkedin.com/company/genialabile" style="font-weight: normal;">
-                            GENiALABILE
-                        </a>
+                    YouTube:<br>
+                    <a href="https://youtube.com/@genialabile/" style="font-weight: normal;">@genialabile</a>
+                    <!---<br><br>
+                    LinkedIn: <a href="https://linkedin.com/company/genialabile" style="font-weight: normal;">GENiALABILE</a>
                     --->
                 <br><br><br>
             
-                <b>4. Credits</b>
+                <b>4. Website Credits</b>
                     <br><br>
-
                     Hosted by GitHub Pages:
-                        <a href="https://github.com/seiseisette/Gen-IA/" style="font-weight: normal;">
-                            Gen-IA
-                        </a>
+                        <a href="https://github.com/seiseisette/Gen-IA/" style="font-weight: normal;">Gen-IA</a>
                     <br><br>
-
                     Designed by: 
                         <a href="https://x.com/seiseisette/" style="font-weight: normal;">
-                            seiseisette
-                        </a>
+                            seiseisette</a>
                 <br><br><br>
            
                 <b>5. Virtual Address</b>
