Aggiorna il layout della pagina contatti con modifiche alla formattazione e ai link

--- a/contacts.html
+++ b/contacts.html
@@ -58,8 +58,8 @@ without prior written authorization.
         <main>
             
             <h1>Contact Us</h1>
-                <p style="font-size: 0.6rem;">
-                    {Last Updated: 10 January 2025}
+                <p class="txt-mini">
+                    Last Updated: 10 January 2025
                 </p>
 
             <p class="imp-l">
@@ -74,12 +74,12 @@ without prior written authorization.
 
                 <b>1. Website</b>
                     <br><br>
-                    W: <a href="https://www.genialabile.com/" style="font-weight: normal;">www.genialabile.com</a>
+                    [·] <a href="https://www.genialabile.com/" style="font-weight: normal;">www.genialabile.com</a>
                 <br><br><br>
 
                 <b>2. Email</b>
                     <br><br>
-                    E: <a href="mailto:genialabile@gmail.com?subject=Contact%20Request%20For" style="font-weight: normal;">
+                    [·] <a href="mailto:genialabile@gmail.com?subject=Contact%20Request%20For" style="font-weight: normal;">
                             genialabile@gmail.com</a>
                 <br><br><br>
 
