Modifica il titolo della sezione "Virtual Address" in "Business Card" nella pagina contatti

--- a/contacts.html
+++ b/contacts.html
@@ -111,7 +111,7 @@ without prior written authorization.
                             seiseisette</a>
                 <br><br><br>
            
-                <b>5. Virtual Address</b>
+                <b>5. Business Card</b>
                 <div class="card">
                         <div class="card-image-container">
                             <img src="https://www.genialabile.com/gen-favicon-rd.ico?v=2" alt="GENiALABILE Logo" class="card-image" loading="lazy">
