Aggiorna i link nella pagina contatti rimuovendo lo stile di font-weight e aggiunge font-weight normale nel CSS

--- a/contacts.html
+++ b/contacts.html
@@ -74,30 +74,30 @@ without prior written authorization.
 
                 <b>1. Website</b>
                     <br><br>
-                    [·] <a href="https://www.genialabile.com/" style="font-weight: normal;">www.genialabile.com</a>
+                    [·] <a href="https://www.genialabile.com/">www.genialabile.com</a>
                 <br><br><br>
 
                 <b>2. Email</b>
                     <br><br>
-                    [·] <a href="mailto:genialabile@gmail.com?subject=Contact%20Request%20For" style="font-weight: normal;">
+                    [·] <a href="mailto:genialabile@gmail.com?subject=Contact%20Request%20For">
                             genialabile@gmail.com</a>
                 <br><br><br>
 
                 <b>3. Social Media</b>
                     <br><br>
                     X (Twitter):<br>
-                    <a href="https://x.com/genialabile/" style="font-weight: normal;">@genialabile</a>
+                    <a href="https://x.com/genialabile/">@genialabile</a>
                     <br><br>
                     Instagram:<br>
-                    <a href="https://instagram.com/genialabile/" style="font-weight: normal;">@genialabile</a>
+                    <a href="https://instagram.com/genialabile/">@genialabile</a>
                     <br><br>
                     Threads:<br>
-                    <a href="https://threads.net/@genialabile/" style="font-weight: normal;">@genialabile</a>
+                    <a href="https://threads.net/@genialabile/">@genialabile</a>
                     <br><br>
                     YouTube:<br>
-                    <a href="https://youtube.com/@genialabile/" style="font-weight: normal;">@genialabile</a>
+                    <a href="https://youtube.com/@genialabile/">@genialabile</a>
                     <!---<br><br>
-                    LinkedIn: <a href="https://linkedin.com/company/genialabile" style="font-weight: normal;">GENiALABILE</a>
+                    LinkedIn: <a href="https://linkedin.com/company/genialabile/">GENiALABILE</a>
                     --->
                 <br><br><br>
             
