Aggiorna le classi di stile per il testo nelle pagine di accessibilità, cookie policy, privacy policy e termini e condizioni, sostituendo gli stili inline con classi CSS e uniformando il markup.

--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -55,7 +55,7 @@ without prior written authorization.
             Last Updated: 10 January 2025
         </p>
 
-        <p class="important-p">
+        <p class="imp-p">
             <br><br>
             <b>0. Welcome to GENiALABILE</b>
             <br><br>
