--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -51,11 +51,11 @@ without prior written authorization.
         <main>
             <!-- Sezione Informazioni -->
             <h1>Privacy Policy</h1>
-            <p style="font-size: 0.6rem;">
-                {Last Updated: 10 January 2025}
+            <p class="txt-mini">
+                Last Updated: 10 January 2025
             </p>
 
-            <p class="important-p">
+            <p class="imp-p">
                 <br><br>
                 <b>0. Welcome to GENiALABILE</b>
                 <br><br>
