--- a/accessibility.html
+++ b/accessibility.html
@@ -50,10 +50,11 @@ without prior written authorization.
         <!-- Contenuto Principale -->
         <main>
             <h1>Accessibility Statement</h1>
-            <p style="font-size: 0.6rem;">
-                {Last Updated: 10 January 2025}</p>
+            <p class="txt-mini">
+                Last Updated: 10 January 2025
+            </p>
 
-            <p class="important-p">
+            <p class="imp-p">
 
                 <br><br>
                 <b>0. Welcome to GENiALABILE</b>
