--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -51,12 +51,12 @@ without prior written authorization.
         <main>
             <!-- Sezione Informazioni -->
             <h1>Terms & Conditions</h1>
-            <p style="font-size: 0.6rem;">
-                {Last Updated: 10 January 2025}
+            <p class="txt-mini">
+                Last Updated: 10 January 2025
             </p>
     
                 
-            <p class="important-p">
+            <p class="imp-p">
                  <br><br>
                <b>0. Welcome to GENiALABILE </b>
                 <br><br>
