Modifica il colore di sfondo del corpo della pagina in index.html e aggiorna main.css per risolvere un problema di caricamento

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ without prior written authorization.
         <style>
             body {
                 margin: 50;
-                background-color: var(--background-color);
+                background-color: #000000);
                 font-family: 'Inconsolata', sans-serif;
                 font-size: 16px;
         
