--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ without prior written authorization.
 
         <style>
             body {
-                background-color: #000000);
+                background-color: #000000;
                 font-family: 'Inconsolata', sans-serif;
                 font-size: 16px;
                 margin: 0;
