--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ without prior written authorization.
                 background-color: #000000;
                 font-family: 'Inconsolata', sans-serif;
                 font-size: 16px;
-                margin: 0;
+                margin: 0 auto;
                 padding: var(--spacing);
                 /* FANCY-FX */
                 opacity: 0;
