--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ without prior written authorization.
         <style>
             body {
                 background-color: #000000;
+                color: var(--info-text);
                 font-family: 'Inconsolata', sans-serif;
                 font-size: 16px;
                 margin: 0 auto;
