Correggi la sintassi nel file main.css rimuovendo una parentesi graffa extra

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ without prior written authorization.
                         `;
                     });
             </script>
-        <!-- HEAD 
+        <!-- HEAD ------------------------------------------------------------------>
 
         <style>
             body {
@@ -67,7 +67,7 @@ without prior written authorization.
                 opacity: 1;
                 visibility: visible;
             }
-        </style>------------------------------------------------------------------>
+        </style>
 
     </head>
     
