--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ without prior written authorization.
 
     </head>
     
-    <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
+    <body style="background-color: #0000000; link: #000000; visited: #000000;">
 
         <main>
             <h1>
