--- a/index.html
+++ b/index.html
@@ -49,6 +49,30 @@ without prior written authorization.
                     });
             </script>
         <!-- HEAD ------------------------------------------------------------------> 
+
+        <style>
+            {
+                margin: 0;
+                background-color: var(--background-color);
+                font-family: 'Inconsolata', sans-serif;
+                font-size: 16px;
+
+                opacity: 0;
+                visibility: hidden;
+                transition: opacity 0.7s ease-in-out;
+            }
+            
+            body.visible {
+                opacity: 1;
+                visibility: visible;
+            }
+        </style>
+
+
+
+
+
+
     </head>
     
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
