Aggiunge interruzioni di riga per migliorare la leggibilità nei documenti di contatto, cookie policy e termini e condizioni

--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -60,13 +60,16 @@ without prior written authorization.
             <b>0. Welcome to GENiALABILE</b>
             <br><br>
             GENiALABILE does not uses cookies and similar for tracking users, analyze website performance, and deliver personalized content.
+            <br>
             This Cookie Policy explains what cookies are, why we do not use them, and your options for managing cookies in other website.
+            <br>
             We use only the minimium ones required to improve user experience, without data collecting.
 
             <br><br><br>
             <b>1. What Are Cookies?</b>
             <br><br>
             Cookies are small text files that are placed on your device by websites you visit.
+            <br>
             They serve a variety of purposes, such as remembering your preferences, enabling functionality, and collecting data for analytics.
 
             <br><br><br>
@@ -97,7 +100,9 @@ without prior written authorization.
             <br><br>
             <i>
             If you do not agree with the use of cookies, you may disable them using the dedicated options or exit cookie's website immediately.
-            Continuing to use this website implies consent to Cookie Policy.</i>
+            <br>
+            Continuing to use this website implies consent to Cookie Policy.
+            </i>
 
 
             <br><br><br>
@@ -113,12 +118,14 @@ without prior written authorization.
             <b>6. Data Protection</b>
             <br><br>
             All data collected via cookies is anonymized wherever possible.
+            <br>
             Personal data processed through cookies complies with applicable laws, including GDPR (EU) and CCPA (US).
 
             <br><br><br>
             <b>7. Updates to This Policy</b>
             <br><br>
             We reserve the right to update this Cookie Policy.
+            <br>
             Changes will be effective upon posting, and the "Last Updated" date will be revised accordingly.
 
             <br><br><br>
