--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -61,12 +61,15 @@ without prior written authorization.
                <b>0. Welcome to GENiALABILE </b>
                 <br><br>
                 Please read these Terms & Conditions [] carefully before using our website and services.
+                <br>
                 By accessing or using our platform, you agree to comply with these Terms. If you do not agree, you must not use our services.
                 
                     <br><br><br>
                 <b>1. Acceptance of Terms</b>
                 <br><br>
-                By using this website, you acknowledge and agree to these Terms and any applicable laws and regulations. If you are accessing our services from the European Union (EU) or the United States (US), specific legal provisions may apply as outlined below.
+                By using this website, you acknowledge and agree to these Terms and any applicable laws and regulations.
+                <br>
+                If you are accessing our services from the European Union (EU) or the United States (US), specific legal provisions may apply as outlined below.
                 
                     <br><br><br>
                 <b>2. Use of the Platform</b>
