Aggiorna il file header.html per utilizzare master.css e rimuove main.css

--- a/header.html
+++ b/header.html
@@ -50,7 +50,7 @@ without prior written authorization.
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">       
 
     <!-- CSS ------------------------------------------------------------------>
-        <link rel="stylesheet" href="https://www.genialabile.com/main.css">
+        <link rel="stylesheet" href="https://www.genialabile.com/master.css">
     <!-- CSS ------------------------------------------------------------------>
     
 <!---//rediret to SSL //--->
