Aggiunge link ORCID nella sezione contatti e nel piè di pagina

--- a/contacts.html
+++ b/contacts.html
@@ -131,6 +131,12 @@ without prior written authorization.
                         <a href="https://x.com/seiseisette/" style="font-weight: normal;">
                             seiseisette
                         </a>
+                        <p>
+                            <a href="https://orcid.org/0000-0002-1825-0097" target="_blank" rel="noopener noreferrer">
+                                <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" alt="ORCID iD"> 
+                                https://orcid.org/0009-0002-6309-2937
+                            </a>
+                        </p>
                 <br><br><br>
            
                 <b>5. Virtual Address</b>
