--- a/footer.html
+++ b/footer.html
@@ -30,6 +30,11 @@ without prior written authorization.
             <!-- // ALERT MODE --> </b><br><br><br><br><!-- // ALERT MODE -->
         © 2025 <a href="https://www.genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
         Advanced-GPT Project—Designed by <a href= "https://github.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
+        <br>
+        <a
+        href="https://orcid.org/0009-0002-6309-2937">ORCID: 0009-0002-6309-2937
+        </a>
+
         <!-- Powered by <a href= "https://openai.com/" style="font-weight: normal">OpenAI</a>. -->
         <br>
         <!-- <br><br><br><br><br><br><br>  style="font-size: 0.7rem;-->
