--- a/footer.html
+++ b/footer.html
@@ -18,7 +18,7 @@ without prior written authorization.
 -------------------------------------------------------------------------------
 
 # Version: v2.1
-# URL: https://www.genialabile.com/footer.html
+# URL: https://genialabile.com/footer.html
 ===============================================================================
 -->
 
@@ -28,29 +28,27 @@ without prior written authorization.
         <b> <!-- ALERT MODE -->
             * We are testing the website. Please, do not take nothing as official since this message is on-screen. Thank you. *
             <!-- // ALERT MODE --> </b><br><br><br><br><!-- // ALERT MODE -->
-        © 2025 <a href="https://www.genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
-        Advanced-GPT Project—Designed by <a href= "https://github.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
+        © 2025 <a href="https://genialabile.com/" style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
+        Advanced-GPT Project—Designed by <a href="https://github.com/seiseisette/" style="font-weight: normal">seiseisette</a>.
         <br>
-        <a
-        href="https://orcid.org/0009-0002-6309-2937">ORCID: 0009-0002-6309-2937
-        </a>
+        <a href="https://orcid.org/0009-0002-6309-2937">ORCID: 0009-0002-6309-2937</a>
 
-        <!-- Powered by <a href= "https://openai.com/" style="font-weight: normal">OpenAI</a>. -->
+        <!-- Powered by <a href="https://openai.com/" style="font-weight: normal">OpenAI</a>. -->
         <br>
         <!-- <br><br><br><br><br><br><br>  style="font-size: 0.7rem;-->
             <p class="imp-p txt-mini">
                 <br>
-                <a href="https://www.genialabile.com/" aria-label="Home">/<</a>
+                <a href="https://genialabile.com/" aria-label="Home">/<</a>
                 |
-                <a href="https://www.genialabile.com/contacts">CONTACT</a>
+                <a href="https://genialabile.com/contacts">CONTACT</a>
                 |
-                <a href="https://www.genialabile.com/terms-and-conditions">TERMS</a>
+                <a href="https://genialabile.com/terms-and-conditions">TERMS</a>
                 |
-                <a href="https://www.genialabile.com/privacy-policy">PRIVACY</a>
+                <a href="https://genialabile.com/privacy-policy">PRIVACY</a>
                 | 
-                <a href="https://www.genialabile.com/cookie-policy">COOKIES</a>
+                <a href="https://genialabile.com/cookie-policy">COOKIES</a>
                 | 
-                <a href="https://www.genialabile.com/accessibility" aria-label="accessibility">ACCESS</a>
+                <a href="https://genialabile.com/accessibility" aria-label="accessibility">ACCESS</a>
             </p>
         <!-- <br><br><br><br><br><br><br> -->
     </footer>
